# ChangeLog for app-emacs/jde
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/jde-2.3.6_pre20081208-classpath-gentoo.patch,
  files/jde-2.3.6_pre20081208-fix-paths-gentoo.patch,
  jde-2.3.6_pre20081208.ebuild:
  Initialise classpath using java-config.

  24 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  files/jde-2.3.6_pre20081208-fix-paths-gentoo.patch:
  Remove extra paren from patch file.

  21 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  files/70jde-gentoo.el, +files/jde-2.3.5.1-import.patch,
  -files/jde-2.3.6_pre20081208-import.patch, jde-2.3.6_pre20081208.ebuild:
  Rename patch file, in order to match main tree. Add path of checkstyle
  style file.

*jde-2.3.6_pre20081208 (19 Mar 2009)

  19 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +files/70jde-gentoo.el,
  +files/jde-2.3.6_pre20081208-fix-paths-gentoo.patch,
  +files/jde-2.3.6_pre20081208-import.patch, +metadata.xml,
  +jde-2.3.6_pre20081208.ebuild:
  Version bump, snapshot of upstream subversion repository. Updated ebuild
  from Johan Andersson <re_jeep@hotmail.com>, with changes by Alistair Bush
  <ali_bush@gentoo.org> and myself; bug 259933. Install all Java files in
  proper locations outside of SITELISP, make paths configurable.