@@ -1,8 +1,8 @@
-AUX 70jde-gentoo.el 539 RMD160 a8e913e5d1885fd6d5c7f0c4fa83d834e89dd3ae SHA1 fabcb1b18e2b2e5eef93b895cd9e35b8aabe5ddf SHA256 d0152f382e1cf722955335e45230789bd4ee68df25708f7a24b373fb7f99fe93
+AUX 70jde-gentoo.el 498 RMD160 580017f3fc52c7307c65230e171d5446f4c6ae26 SHA1 03bc3b611c2bb66b92454200f97644854f140b9a SHA256 82d60bc3524248789cd76b315fc2304bee1d579f2169dae8d9bdb85df3baa104
 AUX jde-2.3.5.1-import.patch 1537 RMD160 4f002ccb420e8ef150911eda2a309356d351efcc SHA1 b7c170d3866f663d3e517df847630dd28393e785 SHA256 f607a9f89876adf73944d73c892be36e1817419b541f71bf901f1d4255b08823
 AUX jde-2.3.6_pre20081208-classpath-gentoo.patch 2464 RMD160 5a5a42abafb5312dd804a8f2c47772b1ac51522b SHA1 0298dcbfa29db02bdf65ee7f871cd8b4879dc436 SHA256 a9ae5c932c695ac7fcdbd1f4154c55b99e72d9b788a7a4505ba97b077ae988c0
 AUX jde-2.3.6_pre20081208-fix-paths-gentoo.patch 7331 RMD160 759d4b198863bae27ee8a4da8677bec081bc79b5 SHA1 3e320bf17db62df9267da18c4e24bbb0c5ab50f9 SHA256 686e455a5076c805bc061754bad6b771f1d4503dc8cb426b16a8978ed8c970e7
 DIST jde-2.3.6_pre20081208.tar.bz2 3688041 RMD160 0b729315ff13e352e95babb6b92e0bb92a539179 SHA1 b663143adc8c26b001cc46d757507889a4115c24 SHA256 4e339a798ef3e91c01bdc70c3e54cf59b2203628b10e2e1a5c67ddbe9205914d
-EBUILD jde-2.3.6_pre20081208.ebuild 1911 RMD160 41d579aa02094722835e38367eaa79a779d575cb SHA1 7490107d0b7a4208f886a56888b04ccb68721e2a SHA256 973e25f29cb115e494dd8dc800de9f3fc35d639c3a29aace4b828eb4064e6c7b
-MISC ChangeLog 1300 RMD160 742621ecd663d26c4d5d491999f696daf609f332 SHA1 7d6639222f264b5baecd3de6403ff3afc51eb8a2 SHA256 19dbf0ae8432690f0bb15ea12f1b9b25613791371ba593ea63bebd87b1f5a99d
+EBUILD jde-2.3.6_pre20081208.ebuild 2125 RMD160 1d3b0bc125b1ca40c4f9df338427a9b88384c3ff SHA1 323fecffbc8c33de34e29c4dd81b126517f435b8 SHA256 bf0d1717d65c4eea3ade4e79357bd92d4bb0d06ecd839de2de9ef51dff6a9781
+MISC ChangeLog 1434 RMD160 4f7b9c244939a1d86c58ba276dc7ff6110c29299 SHA1 2defca068fb592a8a43dbfddcae8fe550f5b5f3a SHA256 e02f4a6ffaa9ba011a8c1d044f5746a52a2b46628f80dde8c7331d6dde5b919c
 MISC metadata.xml 737 RMD160 1ffe7fbd32a23f6167b4d233b5917c8daca2ec7a SHA1 7577584fcc9f9af7eb5a4c2ae205181862ae9fe9 SHA256 0be32d412b86728bc6f77b96859d0f0f786f9bdbe82dc7f719efb1233dbd82ce
