@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Mar 2009; Ulrich Mueller <ulm@gentoo.org> files/70jde-gentoo.el,
+  jde-2.3.6_pre20081208.ebuild:
+  Don't hardcode path of jars.
+
   25 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
   +files/jde-2.3.6_pre20081208-classpath-gentoo.patch,
   files/jde-2.3.6_pre20081208-fix-paths-gentoo.patch,
